--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -16,9 +16,9 @@
                         <tr>
                             <th>Apellido</th>
                             <th>Nombre</th>
-                            <th>Localidad</th>
                             <th>Nivel</th>
                             <th>Escuela</th>
+                            <th>Documento</th>
                             <th class="text-center">Acciones</th>
                         </tr>
                         <!-- Row Estudiantes -->
@@ -26,7 +26,7 @@
                         <tr>
                             <td>{{row.apellido}}</td>
                             <td>{{row.nombre}}</td>
-                            <td><span class="min_loc">{{row.localidad_id}}</span></td>
+                            <td>{{row.nivel}}</td>
                             <td>{{row.escuela}}</td>
                             <td>
                                 <span class="min_dni font-1">{{row.tipo_doc_id}}</span>
