cambio minimo de frontend

--- a/flaskps/templates/auth/panel_components/alumnos.html
+++ b/flaskps/templates/auth/panel_components/alumnos.html
@@ -141,7 +141,7 @@
                                                 <div class="col-md-6">
                                                     <label>Localidad</label>
                                                     <select name="localidad_id" class="localidades browser-default custom-select" required="1">
-                                                        
+                                                        <option value="0" selected disabled>Seleccionar</option>
                                                     </select>
                                                 </div>
                                             </div>
