--- a/flaskps/static/css/homepage.css
+++ b/flaskps/static/css/homepage.css
@@ -14,3 +14,10 @@ body, html {
   background-repeat: no-repeat;
   background-size: cover;
 }
+
+@media (max-width: 992px) {
+  .home-bg {
+    background-image: none !important;
+    background: #fff !important;
+  }
+}
