--- a/flaskps/static/css/style.css
+++ b/flaskps/static/css/style.css
@@ -302,18 +302,18 @@ h1, h2, h3, h4, h5, h6, p {
     transition: 0.2s all;
     color: #444 !important;
     border: 0 none !important;
-    padding: 1.3em 2.3em;
+    width: 100% !important;
+    padding: .9em 2.3em !important;
 }
-.menuItem:hover {
-	cursor: pointer;
-    background: #e8f3ee !important;
+.menuItem a {
+    color: #444 !important;
+    font-size: 1.04em;
 }
-.menuItem:active {
-	background: #ddd !important;
+.menuItem a:hover {
+    color: #2c7695 !important;
 }
-.menuItemActive {
-    background: #ddd;
-    color: #454545;
+.menuItem a:hover i {
+    color: #2c7695 !important;
 }
 .subItem {
 	display: none;
