--- a/flaskps/templates/auth/panel.html
+++ b/flaskps/templates/auth/panel.html
@@ -5,7 +5,6 @@
                 //Carga el menu por defecto en la primer opcion
                 window.onload = load;
                 function load() {
-                    menuSwitch(0);
                     
                     //Llamado a la API de localidades
                     var xmlhttp = new XMLHttpRequest();
@@ -100,13 +99,11 @@
                                 <img src="{{ url_for('static', filename='img/logo-dark.png') }}" class="panel-logo" alt="logo-de-orquesta-escuela-berisso">
                             </div>
                             <ul class="list-group list-group-flush">
-                                <li class="list-group-item menuItem" onclick="menuSwitch(0)" role="button"><i class="fas fa-user-friends black3 mr-2"></i>Empleados</li>
-                                <li class="list-group-item menuItem" onclick="menuSwitch(1)" role="button"><i class="fas fa-user-graduate black3 mr-2"></i>Alumnos</li>
-                                {% if rol.nombre == 'administrador' %}
-                                <li class="list-group-item menuItem" onclick="menuSwitch(2)" role="button"><i class="fas fa-users black3 mr-2"></i>Usuarios</li>
-                                <li class="list-group-item menuItem" onclick="menuSwitch(3)" role="button"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</li>
-                                <li class="list-group-item menuItem" onclick="menuSwitch(4)" role="button"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</li>
-                                {% endif %}
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_alumnos"><i class="fas fa-user-graduate black3 mr-2"></i>Alumnos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_docentes"><i class="fas fa-user-friends black3 mr-2"></i>Empleados</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_usuarios"><i class="fas fa-users black3 mr-2"></i>Usuarios</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_ciclos"><i class="fas fa-school black3 mr-2"></i>Ciclos lectivos</a></li>
+                                <li class="list-group-item menuItem" role="button"><a href="/panel_adminsitio"><i class="fas fa-globe-americas black3 mr-2"></i>Administración del sitio</a></li>
                             </ul>
                         </div>
                         
@@ -139,7 +136,10 @@
                         <div class="container-fluid w-100 p-5 m-0">
                             <div class="row">
                                 <div class="col-4">
-                                    <h1 class="h4 black2" id="panel-title">Panel de administración</h1>
+                                    <h1 class="h4 black2" id="panel-title">
+                                        {% block contenttitle %}
+                                        {% endblock %}
+                                    </h1>
                                 </div>
                                 <div class="col-8">
                                     {% include 'auth/panel_components/mensajes_alertas.html' %}
@@ -151,22 +151,13 @@
                                 </div>
                             </div>
 
+                            <div class="row">
+                                <!-- Block Contenido -->
+                                {% block contentitem %}
+                                {% endblock %}
+                                <!-- /.Block Contenido -->
+                            </div>
 
-                            <!-- Empleados -->
-                            {% include 'auth/panel_components/empleados.html' %}
-                            <!--/.Empleados -->
-
-                            <!-- Modificar alumnos -->
-                            {% include 'auth/panel_components/alumnos.html' %}
-                            <!--/.Modificar alumnos -->
-
-                            <!-- Admin -->
-                            {% if rol.nombre == 'administrador' %}
-                            {% include 'auth/panel_components/usuarios.html' %}
-                            {% include 'auth/panel_components/ciclos_lectivos.html' %}
-                            {% include 'auth/panel_components/estado_sitio.html' %}
-                            {% endif %}
-                            <!--/.Admin -->
                         </div>
                         <!-- /.Container Fluid -->
                     </div>
