--- a/flaskps/templates/home/index.html
+++ b/flaskps/templates/home/index.html
@@ -1,34 +1,41 @@
 {% extends "layout.html" %}
-    {% block header %}
-    <title>Orquesta escuela de berisso</title>
-    <link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
-    {% endblock %}
-    {% block content %}
-        {% include 'home/login_navbar.html' %}
-    <!-- Container -->
-    <div class="home-bg">
-        <!-- Row-->
-        <div class="row px-5 mx-0 home-row">
-            <div class="col-md-6 px-4">
-                <h1 class="home-title">ESCUELA ORQUESTA BERISSO</h1>
-                <!-- Row -->
-                <div class="row px-0 mx-0 mt-4">
-                    <!-- Col -->
-                    <div class="col-md-8 mx-0 px-0">
-                        <p class="home-text mt-5">
-                            La Orquesta Escuela de Berisso comenzó a funcionar en septiembre del 2005 en el barrio de El Carmen de la localidad de Berisso bajo la dirección del Mtro. Juan Carlos Herrero, orientada especialmente a la atención de chicos en situación de vulnerabilidad socio-cultural.
-                        </p>
-                    </div>
-                    <!-- /.Col -->
+{% block header %}
+<title>Orquesta escuela de berisso</title>
+<link rel="stylesheet" href="{{ url_for('static', filename='css/homepage.css') }}">
+{% endblock %}
+{% block content %}
+{% include 'home/login_navbar.html' %}
+<!-- Container -->
+<div class="home-bg">
+    <!-- Row-->
+    <div class="row px-5 mx-0 home-row">
+        <div class="col-md-6 px-4">
+            <h1 class="home-title">{{ infositio.titulo }}</h1>
+            <!-- Row -->
+            <div class="row px-0 mx-0 mt-4">
+                <!-- Col -->
+                <div class="col-md-8 mx-0 px-0">
+                    <p class="home-text mt-5">{{ infositio.descripcion }}</p>
                 </div>
-                <!-- /.Row -->
+                <!-- /.Col -->
             </div>
-            <!-- Col-->
-            <div class="col-md-6">
+            <!-- /.Row -->
+            <!-- Row -->
+            <div class="row px-0 mx-0 mt-4">
+                <!-- Col -->
+                <div class="col-md-8 mx-0 px-0">
+                    <p class="h4 mt-5">{{ infositio.email }}</p>
+                </div>
+                <!-- /.Col -->
             </div>
-            <!-- /.Col-->
+            <!-- /.Row -->
         </div>
-        <!-- /.Row -->
+        <!-- Col-->
+        <div class="col-md-6">
+        </div>
+        <!-- /.Col-->
     </div>
-    <!-- /.Container -->
-    {% endblock %}
+    <!-- /.Row -->
+</div>
+<!-- /.Container -->
+ {% endblock %}
