--- a/flaskps/templates/auth/panel_components/ciclos_lectivos.html
+++ b/flaskps/templates/auth/panel_components/ciclos_lectivos.html
@@ -1,5 +1,8 @@
-<div class="subItem">
-    <!-- Row -->
+{% extends "auth/panel.html" %}
+{% block contenttitle %}
+<i class="fas fa-school black3 mr-2"></i>Ciclos lectivos
+{% endblock %}
+{% block contentitem %}
     <div class="row row-eq-height">
         <div class="col-md-6 mb-3">
             <div class="card h-100">
@@ -327,4 +330,4 @@
         </div>
     </div>
     <!-- /.Row -->
-</div>
+{% endblock %}
